[project]
name = "apify_client"
version = "1.2.1"
description = "Apify API client for Python"
readme = "README.md"
license = {text = "Apache Software License"}
authors = [
    {name = "Apify Technologies s.r.o.", email = "support@apify.com" }
]
keywords = ["apify", "api", "client", "scraping", "automation"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries",
]

requires-python = ">=3.8"
dependencies = [
    "httpx >= 0.24.1"
]

[project.optional-dependencies]
dev = [
    "autopep8 ~= 2.0.2",
    "build ~= 0.10.0",
    "flake8 ~= 6.0.0",
    "flake8-bugbear ~= 23.5.9",
    "flake8-commas ~= 2.1.0",
    "flake8-comprehensions ~= 3.12.0",
    "flake8-datetimez ~= 20.10.0",
    "flake8-docstrings ~= 1.7.0",
    "flake8-encodings ~= 0.5.0",
    "flake8-isort ~= 6.0.0",
    "flake8-noqa ~= 1.3.1",
    "flake8-pytest-style ~= 1.7.2",
    "flake8-quotes ~= 3.3.2",
    "flake8-unused-arguments ~= 0.0.13",
    "isort ~= 5.12.0",
    "mypy ~= 1.3.0",
    "pep8-naming ~= 0.13.3",
    "pre-commit ~= 3.3.2",
    "pytest ~= 7.3.1",
    "pytest-asyncio ~= 0.21.0",
    "pytest-only ~= 2.0.0",
    "pytest-randomly ~= 3.12.0",
    "pytest-timeout ~= 2.1.0",
    "pytest-xdist ~= 3.3.1",
    "redbaron ~= 0.9.2",
    "sphinx ~= 6.1.3",
    "sphinx-autodoc-typehints ~= 1.22",
    "sphinx-markdown-builder == 0.5.4",
    "twine ~= 4.0.2",
]

[project.urls]
"Homepage" = "https://docs.apify.com/api/client/python/"
"Documentation" = "https://docs.apify.com/api/client/python/"
"Source" = "https://github.com/apify/apify-client-python"
"Issue tracker" = "https://github.com/apify/apify-client-python/issues"
"Changelog" = "https://github.com/apify/apify-client-python/blob/master/CHANGELOG.md"
"Apify Homepage" = "https://apify.com"

[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["apify_client*"]

[tool.setuptools.package-data]
apify_client = ["py.typed"]
